k8s/yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: nodejs-app
spec:
  selector:
    app: nodejs-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
